<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jcdev.finance.Authentication.Register">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/nome"
        android:id="@+id/nomeRegistro"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:id="@+id/emailRegistro"
        android:layout_below="@+id/nomeRegistro"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/senha"
        android:id="@+id/senhaRegistro"
        android:layout_below="@+id/emailRegistro"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:password="true"
        android:inputType="numberPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/criar"
        android:id="@+id/btnRegistro"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57dp"
        android:layout_below="@+id/senhaRegistro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/limpar"
        android:id="@+id/btnLimpar"
        android:layout_alignTop="@+id/btnRegistro"
        android:layout_toRightOf="@+id/btnRegistro"
        android:layout_toEndOf="@+id/btnRegistro"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57dp" />

</RelativeLayout>
